readme and checkstyle fix